terminator 1.92-py3:
  Features
    * None

  Enhancements
    * Updated code to use Python 3
    * Updated all translations from Launchpad repo
  
  Bug Fixes
    * Fix duplication of characters while broadcasting when ibus is running
    * Fix Custom Commands plugin


terminator 1.91:
  Features
    * None

  Enhancements
    * Update and fixes for the generic terminator.spec file used by
      downstreams for RPM generation
    * Allow the use of larger separator sizes (Egmont Koblinger,
      LP#1522575)
    * Add the gruvbox light/dark palettes as themes.
    * Updated the preferences window to a modern version of glade.
      Better spacing, layout etc.
    * Fix the background transparency, also allowing per theme
      CSS fixes and styling tweaks. (LP#1599453)
    * Enable the use of the hyper key as a modifier in shortcuts.
      (Steven Keuchel, LP#1362229)
    * Displays confirmation dialog when a single term is
      zoomed/maximised (minoru/shiraeeshi, LP#1531933)
    * Add keywords entry to the desktop file (Julián Moreno Patiño,
      LP#1241052)
    * Add subtrees to custom commands menu - just add '/' to split
      (LP#1631759)
    * Normalise display name when creating DBus name (Andrea
      Corbellini, LP#1267195)
    * Remove auto-capitalisation of profiles in menu and add sorting
      (LP#1521301)

  Bug Fixes
    * Fix missing dependencies in debian/control (LP#1644155,
      LP#1644560)
    * Fix terminator not working with default python3 by forcing
      python2 (LP#1621156)
    * Update some places where the old homepage was still mentioned.
      (LP#1644659)
    * Fix the regression of the initial scrollbar state not being
      set (LP#1645704)
    * Fix using ~ (home dir) over DBus (LP#1646034)
    * Fix the middle mouse button not getting passed to tmux.
      (LP#1647507)
    * Fix oversized splitter bar hover area for Adwaita and any other
      theme that does this. (LP#1647292)