@@ -1,6 +1,6 @@
 Metadata-Version: 1.0
 Name: terminator
-Version: 1.92-py3
+Version: 1.92-py3-dev
 Summary: Terminator, the robot future of terminals
 Home-page: https://gnometerminator.blogspot.com/p/introduction.html
 Author: Chris Jones
