@@ -61,9 +61,6 @@ Use the specified FILE for configuration
 .B \-r, \-\-role=ROLE
 Set a custom WM_WINDOW_ROLE property on the window
 .TP
-.B \-c, \-\-classname=CLASSNAME
-Set a custom name (WM_CLASS) property on the window
-.TP
 .B \-l, \-\-layout=LAYOUT
 Start Terminator with a specific layout. The argument here is the name
 of a saved layout.
